--- a/form.html
+++ b/form.html
@@ -127,15 +127,15 @@
         <div class="caixas" id="inicio">
             <div class="dia">
                 <span><label for="idia">Dia</label></span>
-                <input type="number" name="dia" id="idia">
+                <input type="text" name="dia" id="idia" size="10px">
             </div>
             <div class="mes">
                 <span><label for="imes">Mês</label></span>
-                <input type="number" name="mes" id="imes">
+                <input type="text" name="mes" id="imes" size="10px">
             </div>
             <div class="ano">
                 <span><label for="iano">Ano</label></span>
-                <input type="number" name="ano" id="iano">
+                <input type="text" name="ano" id="iano" size="10px">
             </div>
         </div>
     </form>
